
[package]
name = "sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = {version = "0.23.5", default-features = false}
tokio = { version = "1.17.0", features = ["full"] }
reqwest = "0.11.9"
select = "0.5.0"
scraper = "0.12.0"